# sse2neon

./: CHANGELOG.md  Cargo.toml  README.md
src/: aes.rs  constants.rs  lib.rs  mmx.rs  mxcsr.rs  sse.rs  sse2.rs  sse3.rs  sse41.rs  sse42.rs  ssse3.rs  types.rs
tests/: aes.rs  ieee754.rs  impl_misc.rs  impl_sse.rs  impl_sse2.rs  impl_sse3_ssse3.rs  impl_sse41_42.rs  loadl_storel_unaligned.rs  nan.rs
tests/common/: mod.rs
