[package]
name = "sse2neon"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
description = "x86 SSE-to-ARM NEON intrinsic compatibility shim"
license = "MIT"
repository = "https://github.com/hey-jj/sse2neon"
documentation = "https://docs.rs/sse2neon"
readme = "README.md"
keywords = ["simd", "neon", "sse", "aarch64", "intrinsics"]
categories = ["hardware-support", "no-std"]

[package.metadata.docs.rs]
default-target = "aarch64-unknown-linux-gnu"
targets = ["aarch64-unknown-linux-gnu"]

[dependencies]
